recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:35: error: expected class or object definition
	def subtree(steps:Int, length:Double, angle:Double, shrink:Double)	{
        ^Tree:49: error: expected start of definition
	override def run() {
                 ^Tree:53: error: Unmatched closing brace '}' ignored here
}
^